# firstboot-system-config

./: Cargo.toml  README.md  build.rs
resources/: languages.xml
src/: api.rs  backend.rs  localization.rs  main.rs  models.rs  web.rs
ui/: app.slint
web/: app.css  app.js  index.html
